fix spacing of blog cards

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,6 +49,9 @@ body {
 /* Blog */
     .blog-container{
         color: black;
+        display: flex;
+        justify-content: center;
+        padding
         
     }
     .blog-container a:link {
